# LEOViz

./: .gitignore  .gitmodules  .goreleaser.yaml  CITATION.cff  Dockerfile-starlink  README.md  pyproject.toml
.github/workflows/: build.yaml  release.yaml  test.yaml
starlink/: config.py  data_feature_extraction.py  data_processor.py  dish.py  dish_data_handler.py  grpc_command.py  gs.py  jobs.py  latency.py  location_provider.py  main.py  obstruction.py  plot.py  pop.py  satellite_estimator.py  satellite_matcher.py  satellite_matching_estimation.py  satellites.py  timeslot_manager.py  trajectory_analyzer.py  util.py
tests/: run-tests.sh
tests/sample-data/: .gitignore  obstruction-data-2025-05-29-23-20-13.csv  processed_obstruction-data-2025-05-29-23-20-13.csv  serving_satellite_data-2025-04-15-01-31-27.csv  serving_satellite_data-2025-05-29-23-20-13.csv
tests/sample-data/grpc/2025-04-15/: GRPC_STATUS-2025-04-15-01-31-27.csv  GetStatus-2025-04-15-01-31-27.txt  obstruction_map-2025-04-15-01-31-27.parquet
tests/sample-data/grpc/2025-05-29/: GRPC_STATUS-2025-05-29-23-20-13.csv  obstruction_map-2025-05-29-23-20-13.parquet
tests/sample-data/latency/2025-04-15/: ping-10ms-2025-04-15-01-31-27.txt
tests/sample-data/latency/2025-05-29/: ping-10ms-2025-05-29-23-20-13.txt
